# tachyon

tachyon/crypto/commitments/fri/: BUILD.bazel  fri.h  fri_proof.h
tachyon/math/polynomials/multivariate/: BUILD.bazel  multilinear_dense_evaluations_unittest.cc  multilinear_sparse_evaluations.h  multilinear_sparse_evaluations_unittest.cc
tachyon/math/polynomials/sumcheck/: BUILD.bazel  data_structures.h  ml_prover.h  ml_verifier.h  sumcheck_unittest.cc
tachyon/math/polynomials/univariate/: univariate_dense_coefficients.h  univariate_polynomial.h  univariate_sparse_coefficients.h
tachyon/zk/base/: prover.h
tachyon/zk/plonk/: constraint_system.h
tachyon/zk/plonk/circuit/: column_key.h
tachyon/zk/plonk/circuit/examples/: BUILD.bazel  simple_circuit_unittest.cc  simple_lookup_circuit_unittest.cc  simple_lookup_v1_circuit_unittest.cc  simple_v1_circuit_unittest.cc
tachyon/zk/plonk/circuit/floor_planner/: constant.h  single_chip_layouter.h
tachyon/zk/plonk/circuit/floor_planner/v1/: assignment_pass.h  v1_floor_planner.h  v1_plan.h
tachyon/zk/plonk/halo2/: verifier.h
tachyon/zk/plonk/plonk_prover/: BUILD.bazel  advice_factory.h  advice_factory_unittest.cc  advice_single.h  advice_single_unittest.cc  instance_single.h  instance_single_unittest.cc  witness_collection.h  witness_collection_unittest.cc
tachyon/zk/plonk/vanishing/: BUILD.bazel
