load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cc_unittest")

package(default_visibility = ["//visibility:public"])

tachyon_cc_library(
    name = "data_structures",
    hdrs = ["data_structures.h"],
    deps = [
        "//tachyon/math/polynomials/multivariate:multilinear_extension",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

tachyon_cc_library(
    name = "sum_check",
    hdrs = [
        "data_structures.h",
        "ml_prover.h",
        "ml_verifier.h",
    ],
    deps = [
        "//tachyon/base:logging",
        "//tachyon/base/containers:container_util",
        "//tachyon/base/strings:string_util",
        "//tachyon/math/polynomials:polynomial",
    ],
)

tachyon_cc_library(
    name = "ml_prover",
    hdrs = ["ml_prover.h"],
    deps = [
        ":ml_verifier",
        "//tachyon/math/polynomials/multivariate:multilinear_extension",
    ],
)

tachyon_cc_library(
    name = "ml_verifier",
    hdrs = ["ml_verifier.h"],
    deps = [
        ":ml_prover",
    ],
)

tachyon_cc_unittest(
    name = "sumcheck_unittests",
    srcs = [
        "sumcheck_unittest.cc",
    ],
    deps = [
        ":data_structures",
        ":ml_prover",
        ":sum_check",
        "//tachyon/math/finite_fields/test:gf7",
    ],
)
