load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cc_unittest")

package(default_visibility = ["//visibility:public"])

tachyon_cc_library(
    name = "advice_single",
    hdrs = ["advice_single.h"],
    deps = [
        "//tachyon/base:logging",
        "//tachyon/zk/base:blinded_polynomial",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

tachyon_cc_library(
    name = "instance_single",
    hdrs = ["instance_single.h"],
    deps = [
        "//tachyon/base/containers:container_util",
        "//tachyon/zk/base:prover",
        "//tachyon/zk/plonk:error",
        "//tachyon/zk/transcript",
    ],
)

tachyon_cc_unittest(
    name = "plonk_prover_unittests",
    srcs = [
        "advice_single_unittest.cc",
        "instance_single_unittest.cc",
    ],
    deps = [
        ":advice_single",
        ":instance_single",
        "//tachyon/zk/base:halo2_prover_test",
    ],
)
