load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_cc_unittest")

package(default_visibility = ["//visibility:public"])

tachyon_cc_library(
    name = "advice_single",
    hdrs = ["advice_single.h"],
    deps = [
        "//tachyon/base:logging",
        "//tachyon/zk/base:blinded_polynomial",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

tachyon_cc_library(
    name = "advice_factory",
    hdrs = ["advice_factory.h"],
    deps = [
        "//tachyon/zk/base:prover",
        "//tachyon/zk/plonk/plonk_prover:advice_single",
        "//tachyon/zk/plonk/plonk_prover:witness_collection",
    ],
)

tachyon_cc_library(
    name = "instance_single",
    hdrs = ["instance_single.h"],
    deps = [
        "//tachyon/base/containers:container_util",
        "//tachyon/zk/base:prover",
        "//tachyon/zk/plonk:error",
        "//tachyon/zk/transcript",
    ],
)

tachyon_cc_library(
    name = "witness_collection",
    hdrs = ["witness_collection.h"],
    deps = [
        "//tachyon/base:range",
        "//tachyon/base/containers:container_util",
        "//tachyon/math/polynomials/univariate:univariate_evaluations",
        "//tachyon/zk/base:ref",
        "//tachyon/zk/plonk:constraint_system",
        "//tachyon/zk/plonk/circuit:assignment",
        "//tachyon/zk/plonk/circuit:phase",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/numeric:bits",
    ],
)

tachyon_cc_unittest(
    name = "plonk_prover_unittests",
    srcs = [
        "advice_single_unittest.cc",
        "instance_single_unittest.cc",
        "witness_collection_unittest.cc",
    ],
    deps = [
        ":advice_factory",
        ":advice_single",
        ":instance_single",
        ":witness_collection",
        "//tachyon/zk/base:halo2_prover_test",
        "//tachyon/zk/plonk/circuit/examples:simple_circuit",
    ],
)
